force-app/main/default/objects/Work_Order__c/Work_Order__c.object-meta.xml
<CustomObject>
    <label>Work Order</label>
    <pluralLabel>Work Orders</pluralLabel>
    <nameField>
        <displayFormat>WO-{00000000}</displayFormat>
        <label>Work Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <labelPlural>Work Orders</labelPlural>
    <name>Work_Order__c</name>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>