force-app/main/default/objects/Work_Order__c/fields/Is_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Is_Overdue__c</fullName>
    <formula>AND(
    NOT(ISBLANK(Due_Date__c)),
    Due_Date__c &lt; TODAY(),
    TEXT(Status__c) != &quot;Work Complete&quot;,
    TEXT(Status__c) != &quot;Invoice Submitted&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Overdue</label>
    <type>Checkbox</type>
</CustomField>