force-app/main/default/objects/Work_Order__c/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <label>Issue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>