force-app/main/default/objects/Work_Order__c/fields/NTE_Amount__c.field-meta.xml
<CustomField>
    <fullName>NTE_Amount__c</fullName>
    <label>NTE Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>