force-app/main/default/objects/Work_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restrictedPicklist>true</restrictedPicklist>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>On-site/In Progress</fullName>
            </value>
            <value>
                <fullName>Proposal Submitted</fullName>
            </value>
            <value>
                <fullName>Proposal Pending Approval</fullName>
            </value>
            <value>
                <fullName>Pending Schedule</fullName>
            </value>
            <value>
                <fullName>Work Complete</fullName>
            </value>
            <value>
                <fullName>Invoice Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>